--- a/vignettes/aa-irq_prelim_stat_testing-IJ.Rmd
+++ b/vignettes/aa-irq_prelim_stat_testing-IJ.Rmd
@@ -13,7 +13,12 @@ knitr::opts_chunk$set(
   comment = "#>"
 )
 ```
-### Packages
+
+
+```{r setup}
+#library(GeoMSNA2022)
+devtools::load_all()
+library(here)
 library(dplyr)
 library(readxl)
 library(openxlsx)
@@ -22,12 +27,15 @@ library(srvyr)
 library(illuminate)
 library(sf)
 library(jtools)
-library(randomColor)
 options(scipen = 999)
 
+```
+
+```{r}
 ## Calling dataset
 
-data_set <- read.csv("data/irq_clean_data_with_rs_indicators.csv")
+data_set <- fetch_msna("irq")
+
 
 ## Filtering out unwanted rows
 
@@ -52,7 +60,7 @@ debt_correlation_check <- weighted_pearson_test(data = data_set,dep_var = "how_m
                                                 strata = "strata_and_pop_group",survey_weights = "survey_weight",
                                                 ind_var = c("rs_NDVI_pct_median_May2022","rs_VCI_May2022","Distance_log"))
 
-## Function Needs fixing
+
 unemplyed_relation_check <- illuminate::weighted_t_test(data = data_set, 
                                                         binary_variable = "head_seek_work",
                                                         non_binary_variable =   c("rs_NDVI_pct_median_May2022","rs_VCI_May2022","Distance_log"),
@@ -61,7 +69,7 @@ unemplyed_relation_check <- illuminate::weighted_t_test(data = data_set,
 
 
 
-all_correlation_check <- fcs_correlation_check %>% bind_rows(debt_correlation_check) #unemplyed_relation_check 
+all_correlation_check <- fcs_correlation_check %>% bind_rows(debt_correlation_check,unemplyed_relation_check) 
 
 
 write_list <- list(
@@ -73,6 +81,4 @@ write_list <- list(
 write_excel_as_reach_format(write_list,"corelation_checks.xlsx")
 
 
-```{r setup}
-library(GeoMSNA2022)
 ```
