--- a/vignettes/aa-irq_prelim_stat_testing-IJ.Rmd
+++ b/vignettes/aa-irq_prelim_stat_testing-IJ.Rmd
@@ -60,6 +60,7 @@ debt_correlation_check <- weighted_pearson_test(data = data_set,dep_var = "how_m
                                                 strata = "strata_and_pop_group",survey_weights = "survey_weight",
                                                 ind_var = c("rs_NDVI_pct_median_May2022","rs_VCI_May2022","Distance_log"))
 
+## runs with the source code. the function needs fixing
 
 unemplyed_relation_check <- illuminate::weighted_t_test(data = data_set, 
                                                         binary_variable = "head_seek_work",
@@ -68,8 +69,11 @@ unemplyed_relation_check <- illuminate::weighted_t_test(data = data_set,
                                                         survey_weights = "survey_weight")
 
 
+```
 
-all_correlation_check <- fcs_correlation_check %>% bind_rows(debt_correlation_check,unemplyed_relation_check) 
+```{r}
+# exporting as xlsx 
+all_correlation_check <- fcs_correlation_check %>% bind_rows(debt_correlation_check) 
 
 
 write_list <- list(
